# Instrumental

./: .gitignore  CHANGELOG.rst  old_setup.py  pyproject.toml  scpi_generated.py  setup.cfg  setup.py  test_basler.py  test_keysight33500b.py  test_visa.py  test_vise.py  tmp.py  tmp.txt
33250_program_reference/: 33250 Function Arb Generators.idf  33250 Function Arb Generators.search  33250A.sdl
33250_program_reference/docs/: 33250A-.html  33250A-AMDEPTh_depth_in_percentMINimumMAXimum__AMDEPTh_MINimumMAXimum.html  33250A-AMINTernalFREQuency_frequencyMINimumMAXimum__AMINTernalFREQuency.html  33250A-AMINTernal___FUNCtion_SINusoidSQUareRAMPNRAMpTRIangleNOISeUSER.html  33250A-AMSOURce_INTernalEXTernal__AMSOURce.html  33250A-AMSTATe_OFFON__AMSTATe.html  33250A-AM_Commands.html  33250A-AM_Overview.html  33250A-APPLy.html  33250A-APPLyDC_frequencyDEFault_amplitudeDEFault_offset.html  33250A-APPLyNOISe_frequencyDEFault_amplitude_offset.html  33250A-APPLyPULSe_frequency_amplitude_offset.html  33250A-APPLyRAMP_frequency_amplitude_offset.html  33250A-APPLySINusoid_frequency_amplitude_offset.html  33250A-APPLySQUare_frequency_amplitude_offset.html  33250A-APPLyUSER_frequency_amplitude_offset.html  33250A-APPLy_Command_Syntax.html  33250A-Additional_Information_on_Arbitrary_Waveforms.html  33250A-Amplitude_Modulation_(AM).html  33250A-Amplitude_Modulation_(AM)_Commands.html  33250A-An_Introduction_to_the_SCPI_Language.html  33250A-Arbitrary_Waveform_Commands.html  33250A-Arbitrary_Waveform_Commandsos.html  33250A-Arbitrary_Waveform_Errors.html  33250A-Arbitrary_Waveform_Overview.html  33250A-Arbitrary_Waveforms.html  (+296 more)
33500B_program_reference/: 33500B.sdl  Arbitrary Waveform Generators.idf  Arbitrary Waveform Generators.search  scpi_commands.py
docs/: basler.rst  funcgenerators.rst  keysight33500b.rst  ngc.rst  ngc2d.rst
examples/: ngc2d_example.py
tools/: parse_tektronix_pdf.py
(+178 files in other folders)
