[build-system]
requires = [
    "setuptools>=42",  # Minimum recommended version for pyproject.toml support
    "wheel",
    "cffi>=1.0.0",  # Moved from setup_requires
]
build-backend = "setuptools.build_meta"

[project]
name = "Instrumental-lib"
version = "0.9.2" # This should ideally be dynamic if you want __about__.py to be the source of truth
description = "Library with high-level drivers for lab equipment"
readme = "README.rst"
license = {file = "LICENSE"} # Assumes LICENSE file in root, matches setup.cfg
authors = [
    { name = "Nate Bogdanowicz", email = "natezb@gmail.com" },
]
classifiers = [
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
requires-python = ">=3.7" # Inferred from classifiers

dependencies = [
    'numpy',
    'scipy',
    'pint>=0.7',
    'future',
]

# Dynamic extras_require defined in setup.py cannot be moved here easily.
# Optional dependencies can be defined like this:
# [project.optional-dependencies]
# driver_xyz = ["dependency1", "dependency2"]

[project.urls]
Homepage = "https://github.com/mabuchilab/Instrumental"
Repository = "https://github.com/mabuchilab/Instrumental"

# If you wanted to move find_packages config here:
# [tool.setuptools.packages.find]
# where = ["src"]
# exclude = ["*._cffi_build*"]

# If you wanted to move package_data here:
# [tool.setuptools.package-data]
# "*" = ["*.h", "*.pyd"]
# "instrumental" = ["instrumental.conf.default"]